# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

2020-03-22 Melvin Gagarao <https://github.com/216469637-gagarao-melvin>
### Added
- Title to the JFrame
- changelog.txt
- Icon on the JFrame
- Set the JFrame to spawn in the middle of the screen