@@ -12,3 +12,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - changelog.txt
 - Icon on the JFrame
 - Set the JFrame to spawn in the middle of the screen
+- Element class to hold text content, location, and styling
